--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <ul>
-            <a href="#" id="active"><li class="left">HOME</li></a>
-            <a href="#"><li class="left">RESOURCES</li></a>
+            <a href="#"><li class="left">HOME</li></a>
+            <a href="#" id="active"><li class="left">RESOURCES</li></a>
             <a href="#"><li class="right">FEED</li></a>
             <a href="#"><li class="right">MUSIC</li></a>
             <a href="#"><li class="right">EVENTS</li></a>
